# snooball

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
src/snooball/: __init__.py  cli.py  client.py  export.py  parsing.py  report.py  subscribe.py
tests/: test_parsing.py
