[project]
name = "snooball"
version = "0.1.0"
description = "A small, extensible CLI for managing subreddit subscriptions on a Reddit account from a flat text file."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "praw>=7.8.1",
    "typer>=0.15.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.scripts]
snooball = "snooball.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snooball"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["praw.*", "prawcore.*"]
ignore_missing_imports = true
